--- a/content/contact.html
+++ b/content/contact.html
@@ -3,10 +3,10 @@ title: Say hello
 ---
 
 <div class="py2">
-  <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
+  <form action="https://formspree.io/joonas@joonas.fi" method="POST" class="form-stacked">
     <input type="text" name="email" class="field-light" placeholder="Email Address">
     <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
-    <input type="hidden" name="_next" value="{{ site.baseurl }}/contact-thanks/" />
+    <input type="hidden" name="_next" value="https://joonas.fi/contact-thanks.html" />
     <input type="hidden" name="_subject" value="New submission!" />
     <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" class="button button-blue button-big mobile-block" value="Say hello">
